# mx-community-qdr-sc

./: .gitignore  Cargo.toml  README.md  sc-config.toml
meta/: Cargo.toml
meta/src/: main.rs
odr-contract/: Cargo.toml
odr-contract/meta/: Cargo.toml
odr-contract/meta/src/: main.rs
odr-contract/scenarios/: odr_contract.scen.json
odr-contract/src/: odr_contract.rs
odr-contract/tests/: blackbox_test.rs  odr_contract_scenario_go_test.rs  odr_contract_scenario_rs_test.rs
odr-contract/wasm/: Cargo.toml
odr-contract/wasm/src/: lib.rs
py_scripts/: config.py  context.py  requirements.txt  sc_address.json  scenario_helper.py
py_scripts/interaction/: address_setup.py  call.py  deploy.py  upgrade.py
py_scripts/scenarios/: base_scenario.py
src/: qdr_claim.rs  qdr_constants.rs  qdr_contract.rs  qdr_contract_proxy.rs  qdr_purchase.rs  qdr_setup.rs  qdr_views.rs
tests/: blackbox_test.rs
tests/contract_setup/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
