[package]
name = "qdr-contract"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/qdr_contract.rs"

[dependencies.multiversx-sc]
version = "0.53.2"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.2"

[workspace]
members = [".", "meta"]
